--- a/amplify.yml
+++ b/amplify.yml
@@ -8,7 +8,7 @@ frontend:
       commands:
         - npm run build
   artifacts:
-    baseDirectory: dist/dog-api
+    baseDirectory: dist/dog-api/browser
     files:
       - '**/*'
   cache:
