--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,5 +39,9 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+   "files": [
+    "src/main.ts",
+    "src/polyfills.ts"
+  ],
 }
